// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments component recursively renders a tree of comments 1`] = `
<Comments
  comments={
    Array [
      Object {
        "id": "xyz",
        "replies": Array [
          Object {
            "id": "xyz",
            "replies": Array [],
            "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "user": Object {
              "email": "example@example.com",
              "id": "1234",
            },
          },
        ],
        "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "user": Object {
          "email": "example@example.com",
          "id": "1234",
        },
      },
    ]
  }
  datasetId="ds000001"
>
  <div
    className="col-xs-12"
  >
    <div
      className="dataset-comments"
    >
      <h2>
        Comments
      </h2>
      <ErrorBoundary
        subject="error in dataset comments"
      >
        <LoggedIn />
        <LoggedOut>
          <div>
            Please sign in to contribute to the discussion.
          </div>
        </LoggedOut>
        <CommentTree
          commentMap={
            Object {
              "xyz": Object {
                "id": "xyz",
                "replies": Array [
                  Object {
                    "id": "xyz",
                    "replies": Array [],
                    "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
                    "user": Object {
                      "email": "example@example.com",
                      "id": "1234",
                    },
                  },
                ],
                "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
                "user": Object {
                  "email": "example@example.com",
                  "id": "1234",
                },
              },
            }
          }
          comments={Array []}
          datasetId="ds000001"
        />
      </ErrorBoundary>
    </div>
  </div>
</Comments>
`;

exports[`Comments component renders one top level comment 1`] = `
<Comments
  comments={
    Array [
      Object {
        "id": "xyz",
        "replies": Array [],
        "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "user": Object {
          "email": "example@example.com",
          "id": "1234",
        },
      },
    ]
  }
  datasetId="ds000001"
>
  <div
    className="col-xs-12"
  >
    <div
      className="dataset-comments"
    >
      <h2>
        Comments
      </h2>
      <ErrorBoundary
        subject="error in dataset comments"
      >
        <LoggedIn />
        <LoggedOut>
          <div>
            Please sign in to contribute to the discussion.
          </div>
        </LoggedOut>
        <CommentTree
          commentMap={
            Object {
              "xyz": Object {
                "id": "xyz",
                "replies": Array [],
                "text": "{\\"blocks\\":[{\\"key\\":\\"3sm42\\",\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
                "user": Object {
                  "email": "example@example.com",
                  "id": "1234",
                },
              },
            }
          }
          comments={Array []}
          datasetId="ds000001"
        />
      </ErrorBoundary>
    </div>
  </div>
</Comments>
`;
